--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,14 @@
 name = "redoxide"
 version = "0.1.0"
 edition = "2021"
+description = "RedOxide: An Open Source LLM Red Teaming Suite"
+authors = ["Waclaw Kusnierczyk <waclaw.kusnierczyk@gmail.com>"]
+license = "MIT"
+repository = "https://github.com/wkusnierczyk/redoxide"
+exclude = [
+    ".github/*"
+]
+
 
 [dependencies]
 tokio = { version = "1.32", features = ["full"] }
