--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,8 @@ reqwest = "0.11.27"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["async_tokio"] }
+wiremock = "0.5"
+serde_json = "1.0"
 tokio-test = "0.4"
 
 [[bench]]
