--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "redoxide"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 description = "RedOxide: LLM Red Teaming"
 authors = ["Waclaw Kusnierczyk <waclaw.kusnierczyk@gmail.com>"]
@@ -22,10 +22,12 @@ anyhow = "1.0"
 colored = "2.0"
 futures = "0.3"
 dotenv = "0.15"
+reqwest = "0.11.27"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["async_tokio"] }
-tokio-test = "0.4"
+wiremock = "0.5"
+serde_json = "1.0"
 
 [[bench]]
 name = "benchmark"
